[gd_scene load_steps=3 format=3 uid="uid://rtyc7wf5x3lj"]

[ext_resource type="Script" path="res://gui/game_menu.gd" id="1_m43yt"]
[ext_resource type="PackedScene" uid="uid://bln0sjssdaxub" path="res://gui/options_menu.tscn" id="2_fsx6r"]

[node name="Game_Menu" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1088.0
offset_bottom = -792.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_m43yt")

[node name="Menu_Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)

[node name="NinePatchRect" type="NinePatchRect" parent="Menu_Container"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Menu_Container/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Menu_Container/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Continue" type="Button" parent="Menu_Container/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Continue"

[node name="Save_Game" type="Button" parent="Menu_Container/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Save Game"

[node name="Load_Game" type="Button" parent="Menu_Container/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Load Game"

[node name="Options" type="Button" parent="Menu_Container/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Options"

[node name="Quit" type="Button" parent="Menu_Container/NinePatchRect/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit"

[node name="Options_Menu" parent="." instance=ExtResource("2_fsx6r")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 40.0
offset_right = 96.0
offset_bottom = 40.0

[connection signal="pressed" from="Menu_Container/NinePatchRect/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="Menu_Container/NinePatchRect/VBoxContainer/Save_Game" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="Menu_Container/NinePatchRect/VBoxContainer/Load_Game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="Menu_Container/NinePatchRect/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu_Container/NinePatchRect/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
